platform/kubernetes/networkpolicies/allow-falcosidekick-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-falcosidekick-egress
  namespace: Bastion
spec:
  podSelector:
    matchLabels:
      app: falcosidekick
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - podSelector:
        matchLabels:
          app: security-engine
    ports:
    - port: 8000
      protocol: TCP
  - ports:
    - port: 443
      protocol: TCP
    to:
    - ipBlock:
        cidr: 0.0.0.0/0
