platform/kubernetes/networkpolicies/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: Bastion
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
